--- a/Footer.html
+++ b/Footer.html
@@ -11,6 +11,7 @@
   <footer class="footer">
     <div class="footer-columns">
       <div class="footer-column">
+        <div>
         <h4>Admissions</h4>
         <ul>
           <li><a href="#">B.Tech.</a></li>
@@ -21,8 +22,9 @@
           <li><a href="#">B.Sc.</a></li>
           <li><a href="#">B.Com.</a></li>
           <li><a href="#">BA</a></li>
-          <!-- more links -->
+       
         </ul>
+    </div>
       </div>
       <div class="footer-column">
         <h4>Aspiring Students</h4>
@@ -42,6 +44,10 @@
         <ul>
           <li><a href="#">Campus</a></li>
           <li><a href="#">Events</a></li>
+          <li><a href="#">Code of Conduct</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Current Openings</a></li>
+          <li><a href="#">Downloads</a></li>
           <!-- more links -->
         </ul>
       </div>
@@ -81,7 +87,7 @@
     </div>
     <div class="footer-social">
         <div class="footer-column">
-          <h4>Follow Us</h4>
+       
           <ul class="social-icons">
             <div class="rounded-social-buttons">
                 <a class="social-button facebook" href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
